[package]
name = "ahgroupbot"
version = "0.4.0"
authors = ["sorz <me@sorz.org>"]
edition = "2024"

[dependencies]
teloxide = "0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
byteorder = "1"
serde = "1"
sonic-rs = "0.5"
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
rand = "0.9"

[[bin]]
name = "ahgroupbot"

[[bin]]
name = "parse_chat"
